180 Добавление навыка (#13)